--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           >
           <ul class="menu-items-wrapper">
             <li class="menu-item">
-              <a class="menu-link" href="./index.html" target="_blank"
+              <a class="menu-link current" href="./index.html" target="_blank"
                 >Studio</a
               >
             </li>
@@ -59,7 +59,7 @@
       <section class="hero-section">
         <div class="container">
           <h1 class="hero">Effective Solutions for Your Business</h1>
-          <button class="order-button" type="button">Order Service</button>
+          <button class="order-button" type="submit">Order Service</button>
         </div>
       </section>
       <!-- Section 2 -->
@@ -446,7 +446,120 @@
             </li>
           </ul>
         </div>
+
+        <form
+          class="subscription-form"
+          name="subscribe-form"
+          autocomplete="off"
+          novalidate
+        >
+          <p class="subscription-form-title">Subscribe</p>
+          <div class="subscription-interactive-elements">
+            <input
+              class="subscription-form-input"
+              type="email"
+              name="user-email"
+              placeholder="E-mail"
+            />
+
+            <button class="subscription-form-button" type="submit">
+              Subscribe
+              <svg class="subscription-form-icon" width="24" height="24">
+                <use href="./images/icons2.svg#icon-Frame"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
+
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-button" type="submit">
+          <svg class="close-button-icon" width="8" height="8">
+            <use href="./images/icons2.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-window-description">
+          Leave your contacts and we will call you back
+        </p>
+        <form
+          class="contact-form"
+          name="contact-form"
+          autocomplete="off"
+          novalidate
+        >
+          <div class="contact-field-wrapper">
+            <label class="contact-form-label" for="name"> Name</label>
+            <div class="input-and-icon">
+              <input
+                class="contact-form-input"
+                type="text"
+                name="user-name"
+                id="name"
+                required
+              />
+              <svg class="contact-input-icon" width="18" height="18">
+                <use href="./images/icons2.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="contact-field-wrapper">
+            <label class="contact-form-label" for="phone-number"> Phone</label>
+            <div class="input-and-icon">
+              <input
+                class="contact-form-input"
+                type="tel"
+                name="user-phone-number"
+                id="phone-number"
+                required
+              />
+              <svg class="contact-input-icon" width="18" height="24">
+                <use href="./images/icons2.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="contact-field-wrapper">
+            <label class="contact-form-label" for="email">Email</label>
+            <div class="input-and-icon">
+              <input
+                class="contact-form-input"
+                type="email"
+                name="user-email"
+                id="email"
+                required
+              />
+              <svg class="contact-input-icon" width="18" height="24">
+                <use href="./images/icons2.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="contact-field-wrapper">
+            <label class="contact-form-label" for="comment">Comment</label>
+            <textarea
+              class="contact-form-textarea"
+              name="user-comment"
+              placeholder="Text input"
+              id="comment"
+            ></textarea>
+          </div>
+          <div class="contact-checkbox-wrapper">
+            <input
+              type="checkbox"
+              class="contact-form-checkbox"
+              name="user-privacy-policy"
+              id="user-privacy-policy"
+              value="user-privacy-policy"
+              required
+            />
+            <label for="user-privacy-policy" class="contact-form-label"
+              >I accept the terms and conditions of the
+              <a href="">Privacy Policy</a></label
+            >
+          </div>
+          <button class="contact-form-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
