--- a/index.html
+++ b/index.html
@@ -446,7 +446,6 @@
             </li>
           </ul>
         </div>
-
         <form
           class="subscription-form"
           name="subscribe-form"
@@ -455,13 +454,14 @@
         >
           <p class="subscription-form-title">Subscribe</p>
           <div class="subscription-interactive-elements">
-            <input
+            <label for="subscription-email"></label
+            ><input
               class="subscription-form-input"
               type="email"
               name="user-email"
               placeholder="E-mail"
+              id="subscription-email"
             />
-
             <button class="subscription-form-button" type="submit">
               Subscribe
               <svg class="subscription-form-icon" width="24" height="24">
