--- a/index.html
+++ b/index.html
@@ -446,37 +446,31 @@
             </li>
           </ul>
         </div>
-        <form
-          class="subscription-form"
-          name="subscribe-form"
-          autocomplete="off"
-          novalidate
-        >
+        <div class="subscription-form-container">
           <p class="subscription-form-title">Subscribe</p>
-          <div class="subscription-interactive-elements">
-            <label for="subscription-email"></label
-            ><input
-              class="subscription-form-input"
-              type="email"
-              name="user-email"
-              placeholder="E-mail"
-              id="subscription-email"
-            />
+          <form class="subscription-form">
+            <label class="subscription-form-label"
+              ><input
+                class="subscription-form-input"
+                type="email"
+                name="user-email"
+                placeholder="E-mail"
+            /></label>
             <button class="subscription-form-button" type="submit">
               Subscribe
               <svg class="subscription-form-icon" width="24" height="24">
                 <use href="./images/icons2.svg#icon-Frame"></use>
               </svg>
             </button>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </footer>
 
     <div class="backdrop">
       <div class="modal">
-        <button class="modal-close-button" type="submit">
-          <svg class="close-button-icon" width="8" height="8">
+        <button class="modal-close-button" type="button">
+          <svg class="modal-close-button-icon" width="8" height="8">
             <use href="./images/icons2.svg#icon-close"></use>
           </svg>
         </button>
@@ -490,13 +484,13 @@
           novalidate
         >
           <div class="contact-field-wrapper">
-            <label class="contact-form-label" for="name"> Name</label>
+            <label class="contact-form-label" for="user-name"> Name</label>
             <div class="input-and-icon">
               <input
                 class="contact-form-input"
                 type="text"
                 name="user-name"
-                id="name"
+                id="user-name"
                 required
               />
               <svg class="contact-input-icon" width="18" height="18">
@@ -505,13 +499,15 @@
             </div>
           </div>
           <div class="contact-field-wrapper">
-            <label class="contact-form-label" for="phone-number"> Phone</label>
+            <label class="contact-form-label" for="user-phone-number">
+              Phone</label
+            >
             <div class="input-and-icon">
               <input
                 class="contact-form-input"
                 type="tel"
                 name="user-phone-number"
-                id="phone-number"
+                id="user-phone-number"
                 required
               />
               <svg class="contact-input-icon" width="18" height="24">
@@ -520,13 +516,13 @@
             </div>
           </div>
           <div class="contact-field-wrapper">
-            <label class="contact-form-label" for="email">Email</label>
+            <label class="contact-form-label" for="user-email">Email</label>
             <div class="input-and-icon">
               <input
                 class="contact-form-input"
                 type="email"
                 name="user-email"
-                id="email"
+                id="user-email"
                 required
               />
               <svg class="contact-input-icon" width="18" height="24">
@@ -534,27 +530,30 @@
               </svg>
             </div>
           </div>
-          <div class="contact-field-wrapper">
-            <label class="contact-form-label" for="comment">Comment</label>
+          <div class="contact-textarea-wrapper">
+            <label class="contact-form-label" for="user-comment">Comment</label>
             <textarea
               class="contact-form-textarea"
               name="user-comment"
               placeholder="Text input"
-              id="comment"
+              id="user-comment"
             ></textarea>
           </div>
           <div class="contact-checkbox-wrapper">
             <input
               type="checkbox"
-              class="contact-form-checkbox"
-              name="user-privacy-policy"
-              id="user-privacy-policy"
-              value="user-privacy-policy"
+              class="visually-hidden"
+              name="user-privacy"
+              id="user-privacy"
+              value="true"
               required
             />
-            <label for="user-privacy-policy" class="contact-form-label"
+            <label for="user-privacy" class="contact-form-privacy-label"
+              ><span class="user-privacy-custom-checkbox"
+                ><svg class="privacy-policy-check-icon" width="16" height="16">
+                  <use href="./images/icons2.svg#icon-click"></use></svg></span
               >I accept the terms and conditions of the
-              <a href="">Privacy Policy</a></label
+              <a class="privacy-policy-link" href="">Privacy Policy</a></label
             >
           </div>
           <button class="contact-form-button" type="submit">Send</button>
