--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
           <div class="contact-checkbox-wrapper">
             <input
               type="checkbox"
-              class="visually-hidden"
+              class="visually-hidden contact-form-checkbox"
               name="user-privacy"
               id="user-privacy"
               value="true"
