--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="navigation">
           <a class="logo" href="./index.html"
             >Web<span class="logo-black">Studio</span></a
@@ -52,20 +52,29 @@
             </li>
           </ul>
         </address>
+        <button class="mobile-menu-open-button">
+          <svg
+            class="mobile-menu-button-icon"
+            width="24"
+            height="24"
+            aria-label="mobile menu open icon"
+          >
+            <use href="./images/icons3.svg#icon-menu"></use>
+          </svg>
+        </button>
       </div>
     </header>
     <main>
       <!-- Section 1 -->
-      <section class="hero-section">
+      <section class="hero-section section">
         <div class="container">
           <h1 class="hero">Effective Solutions for Your Business</h1>
           <button class="order-button" type="submit">Order Service</button>
         </div>
       </section>
       <!-- Section 2 -->
-      <section class="benefits-section">
+      <section class="benefits-section section">
         <div class="container">
-          <!-- Hide this title -->
           <h2 class="visually-hidden">Our benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-list-item">
@@ -120,7 +129,7 @@
         </div>
       </section>
       <!-- Section 3 -->
-      <section class="our-team-section">
+      <section class="our-team-section section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
           <ul class="our-team-list">
@@ -284,7 +293,7 @@
         </div>
       </section>
       <!-- Section 4 -->
-      <section class="portfolio-section">
+      <section class="portfolio-section section">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
@@ -409,7 +418,7 @@
     <footer class="footer">
       <div class="container">
         <div class="logo-paragraph-wrapper">
-          <a class="logo" href="./index.html"
+          <a class="footer-logo" href="./index.html"
             >Web<span class="logo-white">Studio</span></a
           >
           <p class="footer-text">
@@ -467,7 +476,7 @@
       </div>
     </footer>
 
-    <div class="backdrop">
+    <div class="backdrop is-open">
       <div class="modal">
         <button class="modal-close-button" type="button">
           <svg class="modal-close-button-icon" width="8" height="8">
@@ -551,13 +560,101 @@
             <label for="user-privacy" class="contact-form-privacy-label"
               ><span class="user-privacy-custom-checkbox"
                 ><svg class="privacy-policy-check-icon" width="10" height="8">
-                  <use href="./images/icons2.svg#icon-click"></use></svg></span
-              >I accept the terms and conditions of the
+                  <use href="./images/icons2.svg#icon-Vector"></use></svg></span
+              ><span>I accept the terms and conditions of the
               <a class="privacy-policy-link" href="">Privacy Policy</a></label
-            >
+            ></span>
           </div>
           <button class="contact-form-button" type="submit">Send</button>
         </form>
+      </div>
+    </div>
+
+    <div class="backdrop-mobile">
+      <div class="container mobile-menu-container">
+        <button class="mobile-menu-close-button" type="button">
+          <svg
+            class="mobile-menu-close-button-icon"
+            width="8"
+            height="8"
+            aria-label="mobile menu close icon"
+          >
+            <use href="./images/icons3.svg#icon-close"></use>
+          </svg>
+        </button>
+        <nav class="mobile-navigation-menu">
+          <ul class="mobile-menu-items-list">
+            <li>
+              <a class="mobile-menu-link" href="./index.html" target="_blank"
+                >Studio</a
+              >
+            </li>
+            <li>
+              <a class="mobile-menu-link" href="" target="_blank">Portfolio</a>
+            </li>
+            <li>
+              <a class="mobile-menu-link" href="" target="_blank">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="mobile-contacts">
+          <ul class="mobile-contacts-list">
+            <li class="mobile-contacts-list-item">
+              <a class="mobile-contacts-link" href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="mobile-contacts-list-item">
+              <a class="mobile-contacts-link" href="tel:+110001111111"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+        </address>
+        <div class="social-media-wrapper-mobile">
+          <ul class="social-networks-list-mobile">
+            <li class="social-networks-list-item-mobile">
+              <a class="social-networks-link-mobile" href="/"
+                ><svg
+                  class="social-networks-icon-mobile"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-instagram"></use></svg
+              ></a>
+            </li>
+            <li class="social-networks-list-item-mobile">
+              <a class="social-networks-link-mobile" href="/"
+                ><svg
+                  class="social-networks-icon-mobile"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-twitter"></use></svg
+              ></a>
+            </li>
+            <li class="social-networks-list-item-mobile">
+              <a class="social-networks-link-mobile" href="/"
+                ><svg
+                  class="social-networks-icon-mobile"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-facebook"></use></svg
+              ></a>
+            </li>
+            <li class="social-networks-list-item-mobile">
+              <a class="social-networks-link-mobile" href="/"
+                ><svg
+                  class="social-networks-icon-mobile"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/icons.svg#icon-linkedin"></use></svg
+              ></a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
